--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -76,7 +76,7 @@ cancer <- read_csv("data/unscaled_wdbc.csv") |>
   mutate(Class = as_factor(Class)) # convert the character Class variable to the factor datatype
 
 # colour palette
-cbPalette <- c("#E69F00", "#56B4E9", "#009E73", "#F0E442", "#0072B2", "#D55E00", "#CC79A7", "#999999")
+cbPalette <- c("orange2", "steelblue2")
 
 # create scatter plot of tumour cell concavity versus smoothness,
 # labelling the points be diagnosis class
