explained why using glimpse function

--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -66,7 +66,7 @@ start by loading the necessary libraries, reading in the breast cancer data
 from the previous chapter, and making a quick scatter plot visualization of
 tumour cell concavity versus smoothness coloured by diagnosis.
 
-```{r 06-precode, fig.height = 4, fig.width = 5, fig.cap="Scatterplot of tumour cell concavity versus smoothness coloured by diagnosis label"}
+```{r 06-precode, fig.height = 4, fig.width = 5, fig.cap="Scatterplot of tumour cell concavity versus smoothness coloured by diagnosis label", message = F, warning = F}
 # load packages
 library(tidyverse)
 library(tidymodels)
@@ -119,6 +119,8 @@ glimpse(cancer_test)
 We can see from `glimpse` in the code above that the training set contains 427
 observations, while the test set contains 142 observations. This corresponds to
 a train / test split of 75% / 25%, as desired.
+
+> We are using the function `glimpse` to view the data set. Since our data set contains many columns, `glimpse` outputs the data such that the columns go down the page, which allows us to see every column in the data frame.
 
 **2. Pre-process the data**
 
