small editing changes

--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -362,6 +362,8 @@ were to collect another training data set from the Sacramento real estate
 market it likely wouldn't match those observations as well. Another term 
 that we use to collectively describe this phenomenon is *overfitting*.
 
+> Variance and bias  
+
 What about the plot where $K$ is quite large, say $K$ = 450, for example? When
 $K$ = 450 for this data set, the blue line is extremely smooth, and almost
 flat. This happens because our predicted values for a given x value (here home
