--- a/09-clustering.Rmd
+++ b/09-clustering.Rmd
@@ -81,7 +81,7 @@ collected by [Dr. Kristen Gorman](https://www.uaf.edu/cfos/people/faculty/detail
 the [Palmer Station, Antarctica LTER](https://lternet.edu/) and includes
 measurements for adult penguins near Palmer Station [@palmerpenguins]. We have
 modified the data set for use in this chapter. Here we will focus on using two
-variables---penguin bill and flipper length, both in mm---to determine whether 
+variables---penguin bill and flipper length, both in millimeters---to determine whether 
 there are distinct types of penguins in our data.
 Understanding this might help us with species discovery and classification in a data-driven
 way.
