--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -41,10 +41,9 @@ to use and manipulate these objects in our data analysis.
 
 To define a **data frame**, first, let's reiterate a few commonly used terms in statistics:
 
-- **observation** -  all of the quantities or a qualities we collect from a given entity/object 
-- **variable** - any characteristic, number, or quantity that can be measured or collected 
-
--  **value** - a single collected quantity or a quality from a given entity/object
+- **observation** -  all of the quantities or a qualities we collect from a given entity/object (*e.g.,* person)
+- **variable** - any characteristic, number, or quantity that can be measured or collected  (*e.g.,* adult height)
+-  **value** - a single collected quantity or a quality from a given entity/object (*e.g.,* the adult height of a particular person)
 
 From a data perspective, a data frame is a rectangle where the rows are the observations:
 
