--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -39,7 +39,7 @@ to use and manipulate these objects in our data analysis.
 
 ### What is a data frame?
 
-To define a **data frame**, first, let's reiterate a few commonly used terms in statistics:
+To define a **data frame**, first, let's introduce a few commonly used terms in statistics:
 
 - **observation** -  all of the quantities or a qualities we collect from a given entity/object (*e.g.,* person)
 - **variable** - any characteristic, number, or quantity that can be measured or collected  (*e.g.,* adult height)
