--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -105,7 +105,7 @@ Table: (\#tab:datatype-table) Basic data types in R
 
 ### How are vectors different from a list?
 
-Lists are also objects in R that have multiple elements. Vectors and lists differ by the requirement of element type consistency. All elements 
+Lists are also objects in R that have multiple elements, you can think of them as super-vectors. Vectors and lists differ by the requirement of element type consistency. All elements 
 within a single vector must be of the same type (e.g., all elements are numbers), whereas elements within a single list can be of different 
 types (e.g., characters, numbers, logicals and even other lists can be elements in the same list). 
 
