--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -132,7 +132,7 @@ The functions from the `tidyverse` package that we are using often give us a spe
 
 > You can use the function `class` on a data object to assess whether a data frame is a built-in R data frame or a tibble. If the data object is a data frame `class` will return `"data.frame"`, whereas if the data object is a tibble it  will return `"tbl_df" "tbl" "data.frame"`. You can easily convert built-in R  data frames to tibbles using the `tidyverse` `as_tibble` function.
 
-Vectors, data frames and lists are basic types of *data structures* in R, which we summarize in table \@ref(tab:datastructure-table).
+Vectors, data frames and lists are basic types of *data structures* in R which are core to most data analyses. We summarize them in table \@ref(tab:datastructure-table).
 
 Table: (\#tab:datastructure-table) Basic data structures in R
 
