--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -440,7 +440,7 @@ c("Vancouver", "Toronto") == c("Toronto", "Vancouver")
 c("Vancouver", "Toronto") %in% c("Toronto", "Vancouver")
 ```
 
-```{r, include = F}
+```{r, include = FALSE}
 city_popn <- region_data |> filter(region %in% c("Toronto", "Montréal", "Vancouver", "Calgary", "Edmonton")) |> arrange(desc(population) ) |> pull(population)
 rep_popn <- rep(city_popn, 2)
 ```
