--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -494,7 +494,7 @@ Is there only one shape for tidy data for a given data set? Not necessarily! It 
 
 
 
-## Combining functions using the pipe operator, `|>`:
+## Combining functions using the pipe operator, `|>`
 
 In R, we often have to call multiple functions in a sequence to process a data frame. The basic ways of doing this can become quickly unreadable if there are many steps. For example, suppose we need to perform three operations on
 a data frame `data`:
