--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -526,7 +526,7 @@ Code like this can also be difficult to understand. Functions compose (reading f
 they are computed by R (above, `mutate` happens first, then `filter`, then `select`). It is also just a really long line of code
 to read in one go. 
 
-The *pipe operator* `|>` solves this problem, resulting in cleaner and easier-to-follow code. The below accomplishes the same thing as the previous two code blocks:
+The base R *pipe operator* `|>` solves this problem, resulting in cleaner and easier-to-follow code. The below accomplishes the same thing as the previous two code blocks:
 
 ```{r eval = F}
 output <- data |> 
