--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -506,7 +506,7 @@ a data frame `data`:
 
 One way of doing is to just write multiple lines of code, storing temporary objects as you go:
 
-```{r eval = F}
+```{r eval = FALSE}
 output_1 <- mutate(data, new_col = old_col * 2)
 output_2 <- filter(output_1, other_col > 5)
 output <- select(output_2, new_col)
