--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -41,7 +41,7 @@ to use and manipulate these objects in our data analysis.
 
 To define a **data frame**, first, let's introduce a few commonly used terms in statistics:
 
-- **observation** -  all of the quantities or a qualities we collect from a given entity/object (*e.g.,* person)
+- **observation** -  all of the quantities or a qualities we collect from a given entity/object (*e.g.,* adult)
 - **variable** - any characteristic, number, or quantity that can be measured or collected  (*e.g.,* adult height)
 -  **value** - a single collected quantity or a quality from a given entity/object (*e.g.,* the adult height of a particular person)
 
@@ -53,7 +53,7 @@ library(canlang)
 write_csv(region_lang, "data/region_lang.csv")
 ```
 
-```{r 02-obs, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Rows are observations in a data frame", fig.retina = 2, out.width = "650"}
+```{r 02-obs, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Rows are observations in a data frame", fig.retina = 2, out.width = "600"}
 knitr::include_graphics("img/obs.jpeg")
 ```
 
@@ -190,9 +190,7 @@ when the values are not in their own column. We can reshape this data set to a l
 ```{r 02-wide-to-long, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from wide to long data", fig.retina = 2, out.width = "1150"}
 knitr::include_graphics("img/wide_to_long.jpeg")
 ```
-We can use the function `pivot_longer`, which combines columns, making the data frame longer and narrower. To learn how to use `pivot_longer`, we will work with a data set called [`region_lang`](https://ttimbers.github.io/canlang/), containing data retrieved from the 2016 Canadian census. For each census metropolitan area, this data set includes counts of how many Canadians cited each language as their mother tongue, the language spoken most often at home,  the language spoken most often at work, and which language they know. 
-
-We will use `read_csv` to import a subset of the `region_lang` data called `region_lang_top5_cities_wide.csv`, which contains only the counts of how many Canadians cited each language as their mother tongue for five major Canadian cities (Toronto, Montréal, Vancouver, Calgary and Edmonton). Our data set is stored in an untidy format, as shown below:
+We can use the function `pivot_longer`, which combines columns, making the data frame longer and narrower. To learn how to use `pivot_longer`, we will work with the `region_lang_top5_cities_wide.csv` data set. This data set contains contains the counts of how many Canadians cited each language as their mother tongue for five major Canadian cities (Toronto, Montréal, Vancouver, Calgary and Edmonton) from the 2016 Canadian census. Our data set is stored in an untidy format, as shown below:
 
 ```{r 02-tidyverse, warning=FALSE, message=FALSE}
 library(tidyverse)
