editing pipe operator  section, moving notes on tidy data to better section, renaming section

--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -326,6 +326,12 @@ Is this data set now tidy? If we recall the three criteria for tidy data:
 
 We can see that this data now satisfies all three criteria, making it easier to analyze. However, we aren't done yet! We have a few more tasks we need to do to get this data in a more usable format, which we will see in the sections below. 
 
+
+### Notes on defining tidy data
+
+Is there only one shape for tidy data for a given data set? Not necessarily! It depends on the statistical question you are asking and what the variables are for that question. For tidy data, each variable should be its own column. So, just as it's essential to match your statistical question with the appropriate data analysis tool (classification, clustering, hypothesis testing, etc.). It's important to match your statistical question with the appropriate variables and ensure they are represented as individual columns to make the data tidy.
+
+## Single table manipulation functions
 ### Using `select` to extract a range of columns
 
 Chapter 1 discussed two `tidyverse` functions: `select` and `filter` to select columns and filter rows from a data frame. We will now learn more ways we can use these functions. Recall, the `select` function creates a subset of the *columns* of a data frame, while the `filter` subsets *rows* with specific values.
@@ -486,11 +492,6 @@ ggplot(official_langs,
 
 From this visualization, we can see that in Calgary, Edmonton, Toronto and Vancouver, English was reported as the most common primary language used at home compared to French. However, in Montréal, French was reported as the most common primary language used at home over English. 
 
-### Notes on defining tidy data
-
-Is there only one shape for tidy data for a given data set? Not necessarily! It depends on the statistical question you are asking and what the variables are for that question. For tidy data, each variable should be its own column. So, just as it's essential to match your statistical question with the appropriate data analysis tool (classification, clustering, hypothesis testing, etc.). It's important to match your statistical question with the appropriate variables and ensure they are represented as individual columns to make the data tidy.
-
-
 
 ## Combining functions using the pipe operator, `|>`
 
@@ -524,7 +525,7 @@ Code like this can also be difficult to understand. Functions compose (reading f
 they are computed by R (above, `mutate` happens first, then `filter`, then `select`). It is also just a really long line of code
 to read in one go. 
 
-The base R *pipe operator* `|>` solves this problem, resulting in cleaner and easier-to-follow code. The below accomplishes the same thing as the previous two code blocks:
+The *pipe operator* `|>` solves this problem, resulting in cleaner and easier-to-follow code. `|>` in built into R so you don't need to load any packages to use it. The code below accomplishes the same thing as the previous two code blocks:
 
 ```{r eval = F}
 output <- data |> 
@@ -533,9 +534,7 @@ output <- data |>
             select(new_col)
 ```
 
-> Note `%>%` is the previous version of the pipe operator so you may see it used 
-in some textbooks or other sources. There are some drawbacks to using the `%>%` 
-pipe operator, thus, in this textbook we will be using the new pipe operator syntax `|>`. 
+> Note: The `|>` pipe operator was inspired by a previous version of the pipe operator, `%>%`. The `%>%` pipe operator is not built into R and needs to be loaded via an external R package. There are some other drawbacks to using `%>%`, which are beyond the scope of this textbook. However, be aware that `%>%` exists since you may see it used in some books or other sources. In this textbook, we will be using the base R pipe operator syntax, `|>`. 
 
 You can think of the pipe as a physical pipe. It takes the output from the function on the left-hand side of the pipe, and
 passes it as the first argument to the function on the right-hand side of the pipe. Note here that we have again split the 
